<resources>
    <string name="app_name">Скидка в обмен на SMS</string>
    <string name="sale_name">Установить скидку</string>
    <string name="stat_name">Статистика</string>
    <string name="schedule_name">Рассылка по расписанию</string>
    <string name="sendnow_name">Рассылка сейчас</string>
    <string name="send_now_name">Рассылка сейчас</string>
    <string name="dev_name">Разработчик</string>
    <string name="schedule_head">СЕГОДНЯ ОТПРАВЛЕНО %1$s SMS</string>
    <string name="schedule_info">SMS автоматически отправится клиенту через 30 дней с момента последнего посещения парикмахерской</string>
    <string name="sms_info">Клиент отправивший SMS на этот телефон с суммой заказа получит в ответ SMS с суммой скидки</string>
    <string name="btn_start">Рассылка сейчас</string>
    <string name="btn_schedule">По расписанию</string>
    <string name="sale_string">Настроить скидку</string>
    <string name="activate">Активировать</string>
    <string name="message">Сообщения</string>
    <string name="contacts">Контакты</string>
    <string name="yesterday">ВЧЕРА </string>
    <string name="yesyesterday">ПОЗАВЧЕРА </string>
    <string name="clients">КЛИЕНТОВ</string>
    <string name="summa">ПОЛУЧЕНО С УЧЕТОМ СКИДКИ</string>
    <string name="empty_clients">0 КЛИЕНТОВ</string>
    <string name="empty_summa">0 РУБ.</string>
    <string name="empty">0</string>
    <string name="today">СЕГОДНЯ </string>
    <string name="sendnow_head">У ВАС %1$s КОНТАКТОВ</string>
    <string name="sale">" Скидка "</string>
    <string name="empty_rows">0 rows</string>
    <string name="sale_change">Скидка успешно изменена</string>
    <string name="sale_not_change">Скидка не была изменена</string>
    <string name="error_write">Произошла ошибка при записи</string>
    <string name="not_message">Нет сообщений</string>
    <string name="no_clients">Нет клиентов</string>
    <string name="start_read_db">Начинаем чтение из бд:</string>
    <string name="stat_info">ДАННЫЕ НЕ ТОЧНЫЕ И НЕ МОГУТ БЫТЬ ИСПОЛЬЗОВАНЫ ДЛЯ БУХГАЛТЕРСКОГО УЧЕТА ИЛИ НАЛОГООБЛАЖЕНИЯ</string>
    <string name="summa_all">ПОЛУЧЕНО ЗА ВЕСЬ ПЕРИОД</string>
    <string name="developer">Разработчик</string>
    <string name="tomonth">ЭТОТ МЕСЯЦ</string>
    <string name="sms_send">Счет №%1$s к оплате %2$s руб. скидка %3$s руб.</string>
    <string name="no_text">Текст не был введен!</string>
    <string name="update_db">Запись обновлена</string>
    <string name="insert_db">Запись сохранена</string>
    <string name="sendnow_info">Если на счете телефона не достаточно денег - SMS не будет отправлено.</string>
    <string name="sendnow_info2">В одном SMS примерно 70 знаков. Тарификация по ценам вашего оператора</string>

    <string name="start_text">Старт</string>
    <string name="cancel_text">Стоп</string>
    <string name="notify_alert">Проверка клиентов по расписанию</string>
    <string name="title_activity_login">Введите свой номер</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Телефон без 8</string>
    <string name="action_sign_in">Подтвердить</string>
    <string name="hint_number">пример: 9211152623</string>
    <string name="info_login">Внимание: введенный номер должен быть установлен на данном устройстве, иначе регистрация невозможна!\nВводить данные с смс вам не нужно, регистрация автоматически подтвердится.</string>
</resources>