<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.careofhair.careofhare.StatActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_info"
                    android:id="@+id/textView6"
                    android:textColor="@color/abc_primary_text_disable_only_material_dark"
                    android:textSize="11dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        style="@style/AppTheme"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/info"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/empty"
                            android:id="@+id/tv_clients"
                            android:layout_weight="1"
                            android:textColor="@color/abc_primary_text_disable_only_material_dark"
                            android:textSize="24dp"
                            android:layout_gravity="top|left|bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/clients"
                            android:id="@+id/textView8"
                            android:layout_weight="1"
                            android:textColor="@color/abc_primary_text_disable_only_material_dark"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/info"
                        android:layout_marginLeft="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/empty_summa"
                            android:id="@+id/tv_summa"
                            android:layout_weight="1"
                            android:layout_gravity="left|bottom"
                            android:textColor="@color/abc_primary_text_disable_only_material_dark"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/summa_all"
                            android:id="@+id/textView10"
                            android:layout_weight="1"
                            android:layout_gravity="left|bottom"
                            android:textColor="@color/abc_primary_text_disable_only_material_dark"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:id="@+id/today"
                        android:textColor="@color/abc_primary_text_disable_only_material_dark"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesterday"
                        android:id="@+id/yesterday"
                        android:textColor="@color/abc_primary_text_disable_only_material_dark"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesyesterday"
                        android:id="@+id/yesyestreday"
                        android:textColor="@color/abc_primary_text_disable_only_material_dark"
                        android:textSize="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tomonth"
                        android:id="@+id/thisM"
                        android:textColor="@color/abc_primary_text_disable_only_material_dark"
                        android:textSize="@dimen/activity_horizontal_margin" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/home_btn"
                        android:background="@drawable/home"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>
